aggiunta form con filtri possibili, il form in sè funziona l'unico errore fatale da risolvere è chiudere l'istanza aperta di picamera ogni volta che il form viene submit o viene ricaricata la pagina

--- a/Robot/remote_control/templates/homepage.html
+++ b/Robot/remote_control/templates/homepage.html
@@ -5,8 +5,13 @@
     <body>
         <h1>Camera</h1>
         <div>
-            {% comment %} <img src="data:image/jpeg;base64,{{frame}}"></img> {% endcomment %}
-            <img src="{% url 'camera_stream' %}">
+            <img src="{% url 'camera_stream' %}?filter={{filter}}">
         </div>
+        <form method="GET">
+            
+            {{ form }}
+            
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Carica</button>
+        </form>
     </body>
 </html>
