correzione bug singola istanza picamera, inserimento movimento motore con wasd

--- a/Robot/remote_control/templates/homepage.html
+++ b/Robot/remote_control/templates/homepage.html
@@ -1,8 +1,96 @@
 <html>
     <head>
         <title>Homepage</title>
+        <script type="text/javascript">
+            function keydown_event(key){
+              var a=key
+            }
+            function keyup_event(key){
+              var a=key
+            }
+          </script>
     </head>
-    <body>
+    <body onkeydown="keydown_event(0)" onkeyup="keyup_event(0)">
+        <script type="text/javascript">
+            run_action('bwready');
+            run_action('fwready');
+            function run_action(value){
+                var xmlHttp  = new XMLHttpRequest();
+                var protocol  = window.location.protocol;
+                var host      = window.location.host;
+                var pathname  = window.location.pathname;
+                url = protocol + "//" + host + pathname + "?action" + "=" + value;
+                console.log(url);
+                //document.getElementById("debug").innerHTML=url;
+                xmlHttp.open( "GET", url, false );
+                xmlHttp.send( null );
+                return xmlHttp.responseText;
+              }
+              function keydown_event(key){
+                if (event.repeat != undefined) {
+                  allowed = !event.repeat;
+                }
+                if (!allowed) return;
+                allowed = false;
+                if (key == 0){
+                  var x;
+                  if(window.event) { // IE8
+                    x=event.keyCode;
+                  }
+                  else if(event.which) {// IE9/Firefox/Chrome/Opera/Safari
+                    x=event.which;
+                  }
+                  var keychar=String.fromCharCode(x);
+                }
+                else{
+                  keychar = key
+                }
+                switch(keychar){
+                  case 'W':
+                    run_action('forward')
+                    break;
+                  case 'S':
+                    run_action('backward')
+                    break;
+                  case 'A':
+                    run_action('fwleft')
+                    break;
+                  case 'D':
+                    run_action('fwright')
+                    break;
+                }
+              }
+              function keyup_event(key){
+                allowed = true;
+                if (key == 0){
+                  var x;
+                  if(window.event) { // IE8
+                    x=event.keyCode;
+                  }
+                  else if(event.which) {// IE9/Firefox/Chrome/Opera/Safari
+                    x=event.which;
+                  }
+                  var keychar=String.fromCharCode(x);
+                }
+                else{
+                  keychar = key
+                }
+                switch(keychar){
+                  case 'W':
+                    run_action('stop')
+                    break;
+                  case 'S':
+                    run_action('stop')
+                    break;
+                  case 'A':
+                    run_action('fwstraight')
+                    break;
+                  case 'D':
+                    run_action('fwstraight')
+                    break;
+                }
+              }
+        </script>
         <h1>Camera</h1>
         <div>
             <img src="{% url 'camera_stream' %}?filter={{filter}}">
