--- a/Robot/remote_control/templates/homepage.html
+++ b/Robot/remote_control/templates/homepage.html
@@ -1,3 +1,6 @@
+{% load static %}
+<link href = "{% static '/CSS/main.css' %}" rel="stylesheet" type="text/css">
+
 <html>
     <head>
         <title>Homepage</title>
