--- a/Robot/remote_control/templates/homepage.html
+++ b/Robot/remote_control/templates/homepage.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link href = "{% static '/CSS/main.css' %}" rel="stylesheet" type="text/css">
+<link href = "{% static '/CSS/style.css' %}" rel="stylesheet" type="text/css">
 
 <html>
     <head>
