--- a/Robot/remote_control/templates/homepage.html
+++ b/Robot/remote_control/templates/homepage.html
@@ -1,5 +1,5 @@
 {% load static %}
-
+<link href = "{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
 <html>
     <head>
         <title>Homepage</title>
