prova2 augmented-ui

--- a/Robot/remote_control/templates/homepage.html
+++ b/Robot/remote_control/templates/homepage.html
@@ -126,7 +126,7 @@
             }
         </script>
         <h1>Camera</h1>
-        <div>
+        <div id = "camera" data-augmented-ui="">
             <!-- metto la vista dello streaming video -->
             <img src="{% url 'camera_stream' %}?filter={{filter}}">
         </div>
