--- a/Robot/remote_control/static/CSS/style.css
+++ b/Robot/remote_control/static/CSS/style.css
@@ -1,7 +1,7 @@
 @import "../node_modules/augmented-ui/augmented-ui.min.css";
 
 body {
-    background-color: rgb(4, 138, 156);
+    background-color: rgb(58, 58, 58);
   }
 h1 {
   color: blue;
@@ -26,4 +26,24 @@ p {
   --aug-bl1: 10px;
   height: 480;
   width: 640;
+}
+
+/*https://stackoverflow.com/questions/6805482/css3-transition-animation-on-load*/
+@keyframes slideInFromCenter {
+  0% {
+      transform: scale(0.2, 1) translateX(75%);
+  }
+  100% {
+      transform: scale(1,1) translateX(0);
+  }
+}
+
+#starter {
+  background-color: blueviolet;
+  animation: 1s ease-out 0s 1 slideInFromLeft;
+}
+
+#code-starter {
+  color: black;
+  text-align: left;
 }
