aggiunta <!DOCTYPE html>

--- a/Robot/remote_control/templates/homepage.html
+++ b/Robot/remote_control/templates/homepage.html
@@ -1,5 +1,6 @@
 {% load static %}
 <link href = "{% static 'CSS/style.css' %}" rel="stylesheet" type="text/css">
+<!DOCTYPE html>
 <html>
     <head>
         <title>Homepage</title>
