creazione starter, modificare animazione

--- a/Robot/remote_control/static/CSS/style.css
+++ b/Robot/remote_control/static/CSS/style.css
@@ -2,6 +2,8 @@
 
 body {
     background-color: rgb(58, 58, 58);
+    margin-left: 50px;
+    margin-right:50px;
   }
 h1 {
   color: blue;
@@ -41,6 +43,7 @@ p {
 #starter {
   background-color: blueviolet;
   animation: 1s ease-out 2s 1 slideInFromLeft;
+  padding-left: 6px;
 }
 
 #code-starter {
