--- a/Robot/remote_control/templates/homepage.html
+++ b/Robot/remote_control/templates/homepage.html
@@ -126,11 +126,11 @@
               set_speed(slider.value);
             }
         </script>
-        <h1>Camera</h1>
         <div id = "starter">
           <!-- barra iniziale di desig, in teoria quando si apre la pagina è la prima ad apparire-->
-          <h3 id = "code-starter">CHEEMSBOT VER 1.0 CODE = "ASABQUIWB843RHMNFE"</h3>
+          <h3 id = "code-starter">CHEEMSBOT  VER 1.0 </h3>
         </div>
+	<h1>Camera</h1>
         <div id = "camera" data-augmented-ui="">
             <!-- metto la vista dello streaming video -->
             <img src="{% url 'camera_stream' %}?filter={{filter}}">
