--- a/Robot/remote_control/static/CSS/style.css
+++ b/Robot/remote_control/static/CSS/style.css
@@ -4,6 +4,7 @@ body {
     background-color: rgb(58, 58, 58);
     margin-left: 50px;
     margin-right:50px;
+    display: flex;
   }
 h1 {
   color: blue;
@@ -52,9 +53,9 @@ p {
 }
 
 #camera-box {
-  width: 50%;
+  flex: 50%;
 }
 
 #movement-box {
-  width: 50%;
+  flex:50%
 }
