--- a/Robot/remote_control/static/CSS/style.css
+++ b/Robot/remote_control/static/CSS/style.css
@@ -12,6 +12,22 @@ p {
   color: red;
 }
 
+form {
+  --aug-clip-tl1: initial;
+  --aug-round-tr1: initial;
+  --aug-clip-br1: initial;
+  --aug-round-bl1: initial;
+  --aug-border: initial;
+  --aug-inlay: initial;
+  --aug-border-all: 4px;
+  --aug-inlay-all: 2px;
+  --aug-border-bg: rgb(219, 29, 219);
+  --aug-tl1: 40px;
+  --aug-br1: 40px;
+  --aug-tr1: 10px;
+  --aug-bl1: 10px;
+}
+
 #camera {
   --aug-clip-tl1: initial;
   --aug-round-tr1: initial;
