--- a/Robot/remote_control/static/CSS/style.css
+++ b/Robot/remote_control/static/CSS/style.css
@@ -13,6 +13,9 @@ p {
 }
 
 form {
+  margin-top: 15px;
+}
+label {
   --aug-clip-tl1: initial;
   --aug-round-tr1: initial;
   --aug-clip-br1: initial;
