modifica form style4

--- a/Robot/remote_control/templates/homepage.html
+++ b/Robot/remote_control/templates/homepage.html
@@ -137,7 +137,7 @@
                 <!-- metto la vista dello streaming video -->
                 <img src="{% url 'camera_stream' %}?filter={{filter}}">
             </div>
-            <form method="GET">
+            <form method="GET" data-augmented-ui="">
                 
                 {{ form }}
                 
