--- a/Robot/remote_control/static/CSS/style.css
+++ b/Robot/remote_control/static/CSS/style.css
@@ -64,6 +64,7 @@ form {
   animation-duration: calc(var(--glitched-duration) * 1.4);
   animation-iteration-count: infinite;
   animation-timing-function: linear;
+  height:19px;
   padding-left: 6px;
 }
 
