--- a/Robot/remote_control/static/CSS/style.css
+++ b/Robot/remote_control/static/CSS/style.css
@@ -57,22 +57,6 @@ form {
   }
 }
 
-#starter {
-  background-color: blueviolet;
-  /*animation: 1s ease-out 2s 1 slideInFromLeft;*/
-  animation: glitched;
-  animation-duration: calc(var(--glitched-duration) * 1.4);
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-  height:19px;
-  padding-left: 6px;
-}
-
-#code-starter {
-  color: black;
-  text-align: left;
-}
-
 @keyframes glitched {
   0% {
     transform: skew(-20deg);
@@ -102,6 +86,23 @@ form {
     transform: skew(0deg);
   }
 }
+
+#starter {
+  background-color: blueviolet;
+  /*animation: 1s ease-out 2s 1 slideInFromLeft;*/
+  animation: glitched;
+  animation-duration: calc(0.9s * 1.4);
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  height:19px;
+  padding-left: 6px;
+}
+
+#code-starter {
+  color: black;
+  text-align: left;
+}
+
 #main {
   display: flex;
 }
